<resources>
    <string name="app_name">formulab</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_us_text">Naša škola obučava kandidate za: AM i B kategorije. Obezbeđujemo Vam teorijsku i praktičnu obuku, stručnu literaturu, i sve potrebne informacije kako da najjednostavnije dođete do vozačke dozvole.</string>
    <string name="about_header_text">O nama</string>

    <string name="values_header_text">Naše vrednosti</string>
    <string name="team_header_text">Naš tim</string>


    <string name="team_text">- Milena Maksimović | Predavač teorijske obuke\n\n
    - Savka Ćulibrk | Administrativni rukovodilac\n\n
        - Nataša Kovačević | Administrativni radnik\n\n
        - Bojana Jokić | Administrativni radnik\n\n
    - Vladimir Gajinov | Instruktor vožnje\n\n
        - Mirko Živković | Instruktor vožnje\n\n
        - Dragan Vasić | Instruktor vožnje\n\n
        - Biserko Kovačević | Instruktor vožnje\n\n
    - Saša Durković | Instruktor vožnje\n\n
    - Vladimir Bošković | Instruktor vožnje\n\n
    - Robert Botlik | Instruktor vožnje\n\n
    - Željko Lovre | Instruktor vožnje</string>
    <string name="licencirani_instruktori_text">Licencirani instruktori</string>
    <string name="dugogodisnje_iskustvo_text">Dugogodišnje iskustvo</string>
    <string name="fleksibilan_raspored_text">Fleksibilan raspored</string>
    <string name="komforna_vozila_text">Komforna vozila</string>
    <string name="onama_text">O nama</string>
    <string name="testovi_text">Testovi</string>
    <string name="kontakt_text">Kontakt</string>
    <string name="autoskola_text">AUTO ŠKOLA</string>
    <string name="formulab_text"><i>FORMULA B\u0020</i></string>
    <string name="aggressive_click_contact_text1">Aplikacija podržana od Aggressive Click\ncontact@aggressiveclick.com | +387 66 631 930</string>
    <string name="facebook_text">Facebook</string>
    <string name="instagram_text">Instagram</string>
    <string name="website_text">Web stranica</string>
    <string name="adresa_text">Adresa 1:\nNjegoševa 15, 21000 Novi Sad</string>
    <string name="adresa2_text">Adresa 2:\nBulevar Evrope 20, 21000 Novi Sad</string>
    <string name="email_text">EMAIL:\nformulab@ymail.com</string>
    <string name="telefon_text">Telefon 1:\n021/301-40-50</string>
    <string name="telefon2_text">Telefon 2:\n021/301-76-97</string>
    <string name="mobile_phone_text">Mobilni telefon:\n064/280-52-42 | 063/859-93-23</string>

</resources>