<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.AboutFragment">

    <include layout="@layout/header_layout" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/info_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:paddingTop="200dp"
        android:paddingBottom="9dp"
        android:paddingHorizontal="9dp"
        android:clipToPadding="false"
        android:elevation="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHeight="wrap_content_constrained"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/about_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="0dp"
                app:contentPadding="6dp"
                app:contentPaddingLeft="9dp"
                app:contentPaddingRight="9dp"
                app:strokeColor="@color/border_color"
                app:strokeWidth="1dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/about_header_btn"
                        style="@style/ButtonHeaderStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/about_header_text"
                        android:textAlignment="viewStart"
                        app:icon="@drawable/person_24"
                        app:iconSize="34dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/manrope_regular"
                        android:text="@string/about_us_text"
                        android:textSize="16sp"
                        app:layout_constraintTop_toBottomOf="@id/about_header_btn" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/values_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="0dp"
                app:contentPadding="6dp"
                app:contentPaddingLeft="9dp"
                app:contentPaddingRight="9dp"
                app:strokeColor="@color/border_color"
                app:strokeWidth="1dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/values_header_btn"
                        style="@style/ButtonHeaderStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/values_header_text"
                        android:textAlignment="viewStart"
                        app:icon="@drawable/values_32"
                        app:iconSize="34dp"
                        app:iconTint="@color/green"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintTop_toBottomOf="@id/values_header_btn">

                        <com.google.android.material.button.MaterialButton
                            style="@style/ButtonListStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/manrope_regular"
                            android:text="@string/licencirani_instruktori_text"
                            app:icon="@drawable/certificate_32"
                            app:iconTint="@color/blue_shade"
                            app:iconSize="24dp" />

                        <com.google.android.material.button.MaterialButton
                            style="@style/ButtonListStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/manrope_regular"
                            android:text="@string/dugogodisnje_iskustvo_text"
                            app:icon="@drawable/experience_32"
                            app:iconTint="@color/blue_shade"
                            app:iconSize="24dp" />

                        <com.google.android.material.button.MaterialButton
                            style="@style/ButtonListStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/manrope_regular"
                            android:text="@string/fleksibilan_raspored_text"
                            app:icon="@drawable/calendar_32"
                            app:iconTint="@color/blue_shade"
                            app:iconSize="24dp" />

                        <com.google.android.material.button.MaterialButton
                            style="@style/ButtonListStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/manrope_regular"
                            android:text="@string/komforna_vozila_text"
                            app:icon="@drawable/car_32"
                            app:iconTint="@color/blue_shade"
                            app:iconSize="24dp" />


                    </LinearLayout>


                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/team_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="0dp"
                app:contentPadding="6dp"
                app:contentPaddingLeft="9dp"
                app:contentPaddingRight="9dp"
                app:strokeColor="@color/border_color"
                app:strokeWidth="1dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/team_header_btn"
                    style="@style/ButtonHeaderStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/team_header_text"
                    android:textAlignment="viewStart"
                    app:icon="@drawable/persons_32"
                    app:iconSize="34dp"
                    app:iconTint="@color/red"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/manrope_regular"
                    android:text="@string/team_text"
                    android:textSize="17sp"
                    app:layout_constraintTop_toBottomOf="@id/team_header_btn" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>