<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.ContactFragment">

    <RelativeLayout
        android:id="@+id/formulab_top_img"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="10dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:rotationX="180"
            android:rotationY="180"
            android:scaleType="centerCrop"
            android:src="@drawable/formulab_bottom" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:fontFamily="@font/manrope_extrabold"
            android:paddingBottom="56dp"
            android:text="@string/formulab_text"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="52sp" />

    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:elevation="0dp"
        android:fillViewport="true"
        android:paddingHorizontal="9dp"
        android:paddingTop="200dp"
        android:paddingBottom="9dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight="wrap_content_constrained"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/about_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="0dp"
                app:contentPadding="6dp"
                app:contentPaddingLeft="9dp"
                app:contentPaddingRight="9dp"
                app:strokeColor="@color/border_color"
                app:strokeWidth="1dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/info_header_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="Načini da stupite u kontakt sa nama:"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toTopOf="@id/contact_info_parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <LinearLayout
                        android:id="@+id/contact_info_parent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:orientation="vertical"
                        app:layout_constraintTop_toBottomOf="@id/info_header_text">

                        <com.google.android.material.button.MaterialButton
                            style="@style/ButtonListStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/manrope_regular"
                            android:text="@string/adresa_text"
                            app:icon="@drawable/place_24"
                            app:iconSize="24dp"
                            app:iconTint="@color/blue" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/email_btn"
                            style="@style/ButtonListStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/manrope_regular"
                            android:text="@string/email_text"
                            app:icon="@drawable/mail_24"
                            app:iconSize="24dp"
                            app:iconTint="@color/red" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/phone_btn"
                            style="@style/ButtonListStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/manrope_regular"
                            android:text="@string/telefon_text"
                            app:icon="@drawable/phone_24"
                            app:iconSize="24dp"
                            app:iconTint="@color/yellow" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/cellphone_btn"
                            style="@style/ButtonListStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/manrope_regular"
                            android:text="@string/mobile_phone_text"
                            app:icon="@drawable/cellphone_32"
                            app:iconSize="24dp"
                            app:iconTint="@color/green" />


                    </LinearLayout>


                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/socials_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="0dp"
                app:contentPadding="6dp"
                app:contentPaddingLeft="9dp"
                app:contentPaddingRight="9dp"
                app:strokeColor="@color/border_color"
                app:strokeWidth="1dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/socials_header_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="Pratite nas na društvenim mrežama:"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toTopOf="@id/socials_info_parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <LinearLayout
                        android:id="@+id/socials_info_parent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:orientation="vertical"
                        app:layout_constraintTop_toBottomOf="@id/socials_header_text">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/facebook_btn"
                            style="@style/ButtonListStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/manrope_regular"
                            android:text="@string/facebook_text"
                            app:icon="@drawable/facebook_32"
                            app:iconSize="24dp"
                            app:iconTint="@color/blue_shade" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/instagram_btn"
                            style="@style/ButtonListStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/manrope_regular"
                            android:text="@string/instagram_text"
                            app:icon="@drawable/instagram_32"
                            app:iconSize="24dp"
                            app:iconTint="@color/blue_shade" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/website_btn"
                            style="@style/ButtonListStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/manrope_regular"
                            android:text="@string/website_text"
                            app:icon="@drawable/www_32"
                            app:iconSize="24dp"
                            app:iconTint="@color/blue_shade" />


                    </LinearLayout>


                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>